WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
68809
IconDatabase::syncThreadMainLoop can assert if wakeSyncThread is called before thread starts executing
https://bugs.webkit.org/show_bug.cgi?id=68809
Summary
IconDatabase::syncThreadMainLoop can assert if wakeSyncThread is called befor...
Mark Rowe (bdash)
Reported
2011-09-26 09:40:27 PDT
As in summary. This is a regression from
r95929
/
bug 68783
.
Attachments
Untested patch
(874 bytes, patch)
2011-09-26 09:42 PDT
,
Mark Rowe (bdash)
no flags
Details
Formatted Diff
Diff
Patch v1
(3.12 KB, patch)
2011-09-26 10:03 PDT
,
Mark Rowe (bdash)
andersca
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2011-09-26 09:42:43 PDT
Created
attachment 108679
[details]
Untested patch This is an untested patch that I believe will address the issue. I’m putting it up as it may be a few hours before I’m able to test the patch, and it may be useful for anyone being troubled by the assertion.
Mark Rowe (bdash)
Comment 2
2011-09-26 10:03:22 PDT
Created
attachment 108683
[details]
Patch v1 Dan says that this addressed the issue for him, so I’m putting it up for review.
Mark Rowe (bdash)
Comment 3
2011-09-26 10:35:25 PDT
Fixed in
r95961
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug